fixed swiper overflow on product pages

--- a/src/components/layout/productDetails/ProductPage/ProuductPage.scss
+++ b/src/components/layout/productDetails/ProductPage/ProuductPage.scss
@@ -1,4 +1,7 @@
 .productPage {
+  .imgaeswrapperPP {
+    width: 100%;
+  }
   .GridItemD {
     padding: 1rem;
   }
